# SmartTV_Raspi_sources-

LoopPlayer/: .anjuta_sym_db.db
LoopPlayer/src/: Makefile  command-sender.cc  command-sender.h  cryption.h  global.h  logic.cc  logic.h  main.cc
SCCommander/: .anjuta_sym_db.db
SCCommander/.anjuta/: default.profile
SCCommander/.anjuta/session/: anjuta.session  dock-layout.xml
SCCommander/src/: Makefile.am  Makefile.in  Rijndael.cc  Rijndael.h  base64.cc  base64.h  command-sender.cc  command-sender.h  core.cc  core.h  cryption.cc  data-getter.cc  data-getter.h  file-op.cc  file-op.h  global.h  initial-options.cc  initial-options.h  main.cc  s-connector.cc  s-connector.h  sccommanMakefile  server.cc  server.h
omxplayer/: Makefile  Makefile.include  omxplayer.cpp  prepare-native-raspbian.sh  version.h
omxplayer/aaomxplayer-dist/usr/lib/omxplayer/: libavdevice.so.57  libavutil.so.55
omxplayer/aaomxplayer-dist/usr/share/man/man1/: omxplayer.1
omxplayer/extlogic/: command-sender.cpp  command-sender.h  file-op.cpp  file-op.h  global.h  logic.cpp  logic.h
omxplayer/omxplayer-dist/usr/lib/omxplayer/: libavfilter.so.6  libswresample.so.2  libswscale.so.4.1.100
